# holo-router

./: .drone.yml  .gitignore  Cargo.toml  README.md  default.nix  diagram.drawio  shell.nix
agent/: Cargo.toml  holo-keystore
agent/src/: main.rs
gateway/: Cargo.toml  README.md  default.nix  shell.nix
gateway/src/: main.rs
proxy/: Cargo.toml  README.md
proxy/src/: main.rs
registry/: .gitignore  Cargo.toml  index.js  package-lock.json  package.json  wrangler.toml
registry/lib/: index.js
registry/lib/routes/: dns-query.js  update.js
registry/src/: lib.rs
src/: main.rs
