[package]
name = "holo-router-agent"
edition = "2018"
version = "0.0.0"

[dependencies]
base64 = "0.10"
ed25519-dalek = { version = "1.0.0-pre.1", features = ["serde"] }
failure = "0.1.5"
reqwest = "0.9.11"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

[dependencies.base36]
git = "https://github.com/transumption-unstable/base36"
rev = "4e6981e13ec5f3748dfe9b8870aa4e8ed749096d"

[dependencies.holochain_conductor_api]
git = "https://github.com/holochain/holochain-rust"
rev = "0d5f7634b9089477d50348855b1ffcf7f2f0dce5"

[dependencies.holochain_common]
git = "https://github.com/holochain/holochain-rust"
rev = "0d5f7634b9089477d50348855b1ffcf7f2f0dce5"

[dependencies.holochain_dpki]
git = "https://github.com/holochain/holochain-rust"
rev = "0d5f7634b9089477d50348855b1ffcf7f2f0dce5"

[dependencies.zerotier]
git = "https://github.com/transumption-unstable/zerotier"
rev = "b2560abc88b7f4054ad42fda2cf7b2cb048c9471"
