[package]
name = "holo-router-gateway"
edition = "2018"
version = "0.0.0"

[dependencies]
failure = "0.1.6"
futures = "0.3"
nix = "0.16.1"
rustls = "0.16.0"
tokio = { version = "0.2.8", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.0"
tracing-subscriber = "0.2.0-alpha.2"
uuid = { version = "0.8.1", features = ["v4"] }
